# temporal-airflow

./: .gitignore  README.md  SETUP.md  pyproject.toml  run_tests_breeze.sh
docker/: Dockerfile  Dockerfile.test  docker-compose.yaml  start.sh
docker/dags/: example_temporal_dag.py
docs/: AIRFLOW_FEATURES_IMPLEMENTATION_PLAN.md  BREEZE_INTEGRATION.md  BREEZE_INTEGRATION_SUMMARY.md  DEEP_INTEGRATION_DESIGN.md  DEEP_INTEGRATION_IMPLEMENTATION_PLAN.md  Dockerfile.temporal  PHASE4_COMMIT_BREAKDOWN.md  PHASE_1_AUDIT_RESULTS.md  PHASE_1_CHANGES_SUMMARY.md  PHASE_1_SPEC.md  PHASE_1_STATUS.md  PHASE_1_TEST_RESULTS.md  README.md  STANDALONE_MODE.md  STRATEGIC_QUESTIONS.md  TEMPORAL_DECISIONS.md  TEMPORAL_GETTING_STARTED.md  TEMPORAL_IMPLEMENTATION_PLAN.md  TESTING_PROCEDURE.md  TESTING_QUICK_START.md  demo_dag.py  docker-compose-temporal.yaml  test-docker-compose.sh
examples/: provider_http_example.py  test_dag.py  test_failing.py  test_loop_structure.py  test_mixed_results.py  test_parallel.py  test_scheduled_dag.py  test_sensors.py
src/temporal_airflow/: __init__.py  activities.py  client_config.py  deep_worker.py  deep_workflow.py  models.py  orchestrator.py  submit_dag.py  sync_activities.py  test_dag.py  test_failing.py  test_loop_structure.py  test_mixed_results.py  test_parallel.py  test_scheduled_dag.py  test_sensors.py  time_provider.py  worker.py  workflows.py
src/temporal_airflow/tests/: __init__.py  conftest.py  test_airflow_user_experience.py  test_api_integration.py  test_context_recursion.py  test_deep_workflow.py  test_deep_workflow_e2e.py  test_models.py  (+12 more)
