[project]
name = "temporal-airflow"
version = "0.1.0"
description = "Temporal integration for Apache Airflow"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Maxim Fateev", email = "maxim@temporal.io" }
]
keywords = ["temporal", "airflow", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "temporalio>=1.9.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/mfateev/temporal-airflow"
Repository = "https://github.com/mfateev/temporal-airflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_airflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/temporal_airflow/tests"]
